--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/fortify": "^1.29",
         "laravel/framework": "^12.0",
         "laravel/passport": "^13.0",
+        "laravel/socialite": "^5.23",
         "laravel/tinker": "^2.10.1"
     },
     "require-dev": {
